package app.entities;

public enum RequestStatus {
    PENDING,
    APPROVED,
    REJECTED,
    COMPLETED
}
