package app.entities;

public enum Role {
    CUSTOMER,
    EMPLOYEE,
    ADMIN
}
