@startuml

' =========================
' APP
' =========================

class Main {
+ main(String[] args)
}

' =========================
' CONFIG
' =========================

class ThymeleafConfig {
}

class SessionConfig {
}

class HikariCP <<connection-pool>>

' =========================
' ENUMS
' =========================

enum Role {
  CUSTOMER
  EMPLOYEE
  ADMIN
}

enum RequestStatus {
  PENDING
  APPROVED
  REJECTED
  COMPLETED
}

' =========================
' ENTITIES
' =========================

class User {
  - Int id
  - String email
  - String password
  - Role role
}

class ContactInfo {
  - Int id
  - String firstName
  - String lastName
  - String address
  - String phone
  - String email
}

class Zip {
  - Int id
  - String zipcode
  - String town
}

class Request {
  - Int id
  - LocalDateTime timestamp
  - RequestStatus status
}

class RequestLine {
  - Int id
  - Integer quantity
  - Double unitPrice
}

class Component {
  - Int id
  - String name
  - Double width
  - Double height
  - String unit
  - String description
}

class PriceCatalog {
  - Int id
  - Double unitPrice
  - LocalDate validFrom
  - LocalDate validTo
}

class Carport {
  - Int id
  - Double length
  - Double width
  - Double height
  - Double roofAngle
  - LocalDateTime timestamp

}

class CarportComponent {
  - Int quantity
  - Double cutLength
  - String description
}

class Shed {
  - Int id
  - Double length
  - Double width
}

class RoofType {
  - Int id
  - String name
}

' =========================
' MAPPERS (PERSISTENCE)
' =========================

class UserMapper
class CarportMapper
class CarportComponentMapper
class RequestMapper
class ComponentMapper

' =========================
' SERVICES
' =========================

class UserService

class CarportService

class RequestService

class ComponentService

class MaterialCalculationService {
  + calculate(length, width)
}

' =========================
' CONTROLLERS
' =========================

class UserController
class CarportController
class RequestController
class ComponentController

' =========================
' UTILITIES
' =========================

class PasswordUtil

class PriceCalculator

class ValidationUtil

class MaterialRuleUtil <<utility>> {
  + calculatePosts(length)
  + calculateRafters(length)
  + calculateBattens(width)
  + calculateRoofSheets(width)
  + calculateScrews(roofSheets)
}

' =========================
' EXCEPTIONS
' =========================

exception DatabaseException

' =========================
' RELATIONSHIPS (ENTITIES)
' =========================

User "1" -- "0..*" ContactInfo
User "1" -- "0..*" Carport

ContactInfo "*" -- "1" Zip

Request "*" -- "1" Carport
Request "*" -- "1" ContactInfo

Request "1" -- "0..*" RequestLine
RequestLine "*" -- "1" Component

Component "1" -- "0..*" PriceCatalog

Carport "*" -- "1" RoofType
Carport "1" -- "0..1" Shed

Carport "1" -- "0..*" CarportComponent
Component "1" -- "0..*" CarportComponent

' =========================
' CONTROLLER FLOW
' =========================

UserController --> UserService
CarportController --> CarportService
RequestController --> RequestService
ComponentController --> ComponentService

' =========================
' SERVICE FLOW
' =========================

UserService --> UserMapper

CarportService --> CarportMapper
CarportService --> CarportComponentMapper
CarportService --> MaterialCalculationService

RequestService --> RequestMapper

ComponentService --> ComponentMapper

MaterialCalculationService --> ComponentMapper
MaterialCalculationService --> MaterialRuleUtil

' =========================
' MAPPERS -> ENTITIES
' =========================

UserMapper --> User
CarportMapper --> Carport
CarportComponentMapper --> CarportComponent
RequestMapper --> Request
ComponentMapper --> Component

' =========================
' UTILITIES USAGE
' =========================

UserService --> PasswordUtil
UserService --> ValidationUtil

CarportService --> PriceCalculator

' =========================
' CONFIG
' =========================

SessionConfig ..> UserController
ThymeleafConfig ..> UserController

HikariCP ..> UserMapper
HikariCP ..> CarportMapper
HikariCP ..> RequestMapper
HikariCP ..> ComponentMapper
HikariCP ..> CarportComponentMapper

' =========================
' APPLICATION
' =========================

Main --> ThymeleafConfig
Main --> SessionConfig

Main --> UserController
Main --> CarportController
Main --> RequestController
Main --> ComponentController

@enduml